spacing fix 2

--- a/stylesheets/css/master.css
+++ b/stylesheets/css/master.css
@@ -57,7 +57,7 @@ body{
 }
 
 #bignewsimg{
-  margin: 11vw auto 0.7vw auto;
+  margin: 11.1vw auto 0.7vw auto;
   display: block;
   width: 28vw;
 }
@@ -71,7 +71,7 @@ body{
   line-height: 1.15;
 
 
-  margin: 1.8vw 20vw 1.5vw 20vw;
+  margin: 1.7vw 20vw 1.2vw 20vw;
 
 }
 
@@ -105,7 +105,7 @@ body{
 #iphoneXs{
   margin: 14vw auto 0px auto;
   display: block;
-  width: 70vw;
+  width: 72vw;
 }
 
 #iphoneXsLogo{
